# vim: set noexpandtab:

2014-10-30 Serhan Mete <amete@cern.ch>
	* Started filling jet information for xAOD

2014-02-13 Steve
	* Now using central SUSYTools method for sherpa WW radiative
	  b quark fix: Sherpa_WW_veto

2014-02-11 Steve
	* BUGFIX: Muon energy systematic shift factors off by a factor of 1000
	  due to accidental double unit conversion. It has been fixed.

2014-02-10 Steve
	* Now determining if a sample is a SUSY dataset dynamically
		* Check to see if the SpartX_pdgId branches are available
		* No longer comparing sample name against known string patterns
		* IMPORTANT: we need to keep an eye on this branch structure
	* Still recognizing Wh samples with hardcoded string pattern matching
	* Now filling procCutFlow histogram all the time
		* For background samples, the proc is 0
		* This allows us to unify the signal and bkgs, and use
		  the proc cutflow histograms exclusively
		* I've left the genCutFlow histogram in place for now,
		  assuming we won't transition right away.
	* Now saving susySpartId1 and susySpartId2 to Event class
	* Updated overlap removal prescription in SusyD3PDAna to follow SusyNtTools
	* Updated the electron medium efficiency SF file to v04
		* Need to make sure we keep this updated... How to check automatically?
	* passLarHoleVeto now just returns true
		* Shouldn't be used now anyway

2014-01-17 Steve
	* Changed default value of susyFinalState to 0 to be consistent with SUSYTools
	* Changed default value of hDecay to kUnknown (now 0)

2013-12-26 Davide
	* Tagging SusyCommon-00-01-04

2013-12-14 Steve
	* Turned off photon selection, which needs updates for SUSYTools-00-03-14.
	  I don't think we need photon selection now anyways

2013-12-11 Steve
	* Cleaned up methods that calculate systematic shift factors for ele, mu, jets

2013-11-06 Steve
	* Update pileup file to default file for both mc12a and mc12b: PileupReweighting/mc12ab_defaults.prw.root
	* Updates for SUSYTools-00-03-09
		* Tau SFs now in TauCorrUncert/TauSF